# DSA2.1

./: .gitignore  DataEntry.cpp  DataEntry.h  Datareader.cpp  Datareader.h  Menue.cpp  Menue.h  README.md  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  main.cpp
P3/: CMakeLists.txt  MyAlgo.cpp  MyAlgo.h  MyAlgo.h.gch  MyAlgorithms.cpp  MyAlgorithms.h  heapsort.txt  install_openmp_gcc.sh  main.cpp  random_gen.h
P3/MATLAB_STUFF/: first_complete_plot_full_run.tif  heapsort.txt  heapsort_show.txt  mergesort.txt  mergesort_show.txt  p3_matlab_pro.mat  plot.gnu  plot_matrix_316_100.m  plot_matrix_combined.m  plot_matrix_noomp.m  plot_matrix_omp.m  plot_sorting.m  plotter.m  quicksort.txt  quicksort_show.txt  right_matrix_probl_31_100.tif  right_probl_100_100.tif  right_probl_10_100.tif  shellsort.txt  shellsort_show.txt
P3/MATLAB_STUFF/DATA/: heapsort_1000000_100.txt  heapsort_10000_100.txt  matrix_mul_col_100_100.txt  matrix_mul_col_10_100.txt  matrix_mul_col_2_100.txt  matrix_mul_col_31_100.txt  matrix_mul_col_4_100.txt
P3/MATLAB_STUFF/DATA_SHOW/: heapsort_show.txt  mergesort_show.txt  quicksort_show.txt  shellsort_show.txt
P3/MATLAB_STUFF/MATRIX_DATA/: final_matrix_combined_800.tif  final_matrix_nomp_800.tif  final_matrix_omp_800.tif  matrix_data_100.tif  matrix_data_316.tif  matrix_data_400.tif  matrix_data_800.tif  matrix_mul_col.txt  matrix_mul_colNoParallel.txt  matrix_mul_col_100_100.txt  matrix_mul_col_316_100.txt  matrix_mul_col_31_100.txt  matrix_mul_col_31_100_OPENMP.txt  matrix_mul_col_31_100__OPENMP_.txt  matrix_mul_col_400_100.txt  matrix_mul_col_800_100.txt  (+13 more)
(+157 files in other folders)
